# handmade-rust

./: Cargo.toml  README.md
game/: Cargo.toml
game/src/: game_api.rs  handmade.rs
handmade_macros/: Cargo.toml
handmade_macros/src/: handmade_macros.rs
logger/: Cargo.toml
logger/src/: logger.rs
platform_layer/: Cargo.toml
platform_layer/src/: main.rs  win32_platform.rs
