[package]
name = "platform_layer"
version = "0.1.0"
edition = "2024"

[dependencies]
logger = { workspace = true }
handmade_macros = { workspace = true }
game = { workspace = true }
windows-sys = { version = "0.61.2", features = [
    "Win32_Graphics_Gdi",
    "Win32_Media",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_System_Environment",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_XboxController",
    "Win32_UI_WindowsAndMessaging",
] }
